# NonadditivityAnalysis

./: .gitattributes  .gitignore  .pre-commit-config.yaml  COMMUNICATION.md  LICENSE  MANIFEST.in  README.md  environment.yaml  pyproject.toml
.github/workflows/: CI.yaml
example/: PDE10_Roche.txt
nonadditivity/: README.md  __init__.py  cli.py  nonadditivity_workflow.py
nonadditivity/classification/: README.md  __init__.py  circle_classification.py  classify.py  compound_classification.py  ortho_classification.py  rgroup_distance.py  transformation_classification.py  utils.py
nonadditivity/classification/classification_classes/: README.md  __init__.py  circle.py  compound.py  transfromation.py
nonadditivity/utils/: README.md  __init__.py  commandline.py  errors.py  log.py  math.py  types.py
nonadditivity/workflow/: README.md  __init__.py  canonicalize_output.py  input_parsing.py  mmpdb_helper.py  nonadditivity_core.py  output.py
tests/: README.md  __init__.py  _utils.py  conftest.py  test_import.py  test_version.py
tests/_fixtures/: classification_fixtures.py  commandline_fixtures.py  dataframes_fixtures.py  path_fixtures.py
tests/_test_files/: test_c2c.csv  test_c2c_mult.csv  test_c2c_mult_wc.csv  test_fragments.json  test_fragments_faulty.json  test_fragments_faulty2.json  test_naa.csv  test_naa_classify.csv  test_naa_mult.csv  test_naa_mult_wc.csv  test_naa_series.csv  test_pchembl_input.txt  test_per_cpd.csv  test_per_cpd_classify.csv  test_per_cpd_mult.csv  test_per_cpd_mult_wc.csv  test_per_cpd_series.csv  test_raw_mmp.csv  test_smiles.smi  test_smiles_faulty.smi
tests/nonadditivity/: test_cli.py  test_nonadditivity_workflow.py
tests/nonadditivity/classification/: __init__.py  test_circle_classification.py  test_classify.py  test_compound_classification.py  test_ortho_classification.py  test_rgroup_distance.py  test_transformation_classification.py  test_utils.py
tests/nonadditivity/classification/classification_classes/: __init__.py  test_circle.py  test_compound.py  test_transformation.py
tests/nonadditivity/utils/: __init__.py  test_commandline.py  test_math.py
tests/nonadditivity/workflow/: __init__.py  test_canonicalize_output.py  test_input_parsing.py  test_mmpdb_helper.py  test_nonadditivity_core.py  test_output.py
tests/test_files/: canonical_na_output.csv  canonical_transformations.csv  temp_c2c.csv  temp_naa.csv
